--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "babel-traverse": "^6.14.1",
     "babylon": "^6.14.1",
     "jest-config": "^23.6.0",
-    "jest-snapshot": "^23.6.0"
+    "jest-snapshot": "^23.6.0",
+    "wsl-path": "1.1.0"
   },
   "jest": {
     "testPathIgnorePatterns": [
