--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "babel src/ -d build/",
     "prepublish": "yarn run build",
-    "test": "jest"
+    "test": "jest",
+    "test-ci": "yarn jest -i --config jest.config.ci.js --coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -20,7 +21,9 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "flow-bin": "^0.83.0",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "jest-junit": "^5.2.0",
+    "jest-silent-reporter": "^0.1.1"
   },
   "dependencies": {
     "babel-traverse": "^6.14.1",
