--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "flow-bin": "^0.83.0",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
-    "jest-silent-reporter": "^0.1.1"
+    "jest-silent-reporter": "^0.1.1",
+    "wsl-path": "^1.1.0"
   },
   "dependencies": {
     "babel-traverse": "^6.14.1",
@@ -33,8 +34,7 @@
   },
   "jest": {
     "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/build/"
+      "/node_modules/"
     ]
   },
   "typings": "index.d.ts"
